--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <form action="" id="post-form">
             <h3>Create a post now</h3>
             <div class="form-group">
-                <label for="Image">Upload and image</label>
+                <label for="Image">Upload an image</label>
                 <img src="" id="img-preview" class="d-none" height="200" width="200" style="object-fit: contain;" />
                 <input type="file" accept="image/*" multiple class="form-control" />
             </div>
